--- a/ADDING FORMS.csproj
+++ b/ADDING FORMS.csproj
@@ -58,6 +58,12 @@
     <Compile Include="FormAddName.Designer.cs">
       <DependentUpon>FormAddName.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormChangeName.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormChangeName.Designer.cs">
+      <DependentUpon>FormChangeName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -65,6 +71,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormAddName.resx">
       <DependentUpon>FormAddName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormChangeName.resx">
+      <DependentUpon>FormChangeName.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
